# molotov

./: .gitignore  .prettierignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: scout-audit.yml
apps/web/: .env.example  next.config.ts  package.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: activity-feed.tsx  contract-evidence.tsx  economy-flow.tsx  featured-work.tsx  final-cta.tsx  footer.tsx  hero.tsx  manifesto.tsx  mint-form.tsx  nav.tsx  sw-register.tsx  wallet-button.tsx
contracts/: Cargo.toml
contracts/artist-registry/: Cargo.toml
contracts/artist-registry/src/: lib.rs  test.rs
contracts/marketplace/: Cargo.toml  marketplace-invariants.md
contracts/marketplace/src/: lib.rs  test.rs
contracts/nft/: Cargo.toml
contracts/nft/src/: lib.rs  test.rs
doc/: architecture.md  contracts.md  indexer-spec.md  migration-map.md
docs/: i18n.md  index.html
supabase/: config.toml
supabase/migrations/: 20260611000000_supabase_roles.sql  20260611000001_artists.sql  20260611000002_tokens.sql  20260611000003_listings.sql  20260611000004_sales.sql  20260611000005_token_transfers.sql  20260611000006_indexer_cursor.sql  20260611000007_indexes.sql  20260611000008_effective_owner_view.sql  20260611000009_rls.sql  20260611000010_indexer_fns.sql  20260611000011_test_helpers.sql
supabase/tests/: cloud-security.ts  helpers.ts  indexer.test.ts  package.json  run_sql_tests.sql  vitest.config.ts
(+32 files in other folders)
