[workspace]
resolver = "2"
members = ["nft"]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["Molotov"]
repository = "https://github.com/BuenDia-Builders/molotov"

[workspace.dependencies]
soroban-sdk = "=25.3.0"
stellar-tokens = "=0.7.1"
stellar-access = "=0.7.1"
stellar-contract-utils = "=0.7.1"
stellar-macros = "=0.7.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
